änderung url syntax